# currust

./: .gitignore  CHANGELOG.md  COMPARISONS.md  Cargo.toml  README.md  dist-workspace.toml  mappings.json
.github/workflows/: release.yml
src/: cli.rs  cur.rs  errors.rs  fs_utils.rs  lib.rs  log.rs  logging.rs  main.rs  models.rs  scaling.rs
src/cursors/: ani.rs  common.rs  cur.rs  cursor_image.rs  generic_cursor.rs  linux.rs  mod.rs  symlinks.rs  themes.rs  windows.rs  xcur.rs  xcursor.rs
src/formats/: ani.rs  crs.rs  inf.rs  mod.rs  xcursor.rs
src/parse/: constants.rs  cursor.rs  mod.rs
src/themes/: mod.rs  symlinks.rs  theme.rs
test_data/: 4bpp_rgba  8bpp_rgba  README.md
testing/: load_xcur.c
testing/data/: 1bpp_rgba
testing/data/[The Herta Cursor ver.2.0.0]/: 01-Normal.ani  02-Link.ani  03-Loading.ani  04-Help.ani  05-Text Select Alt.ani  05-Text Select.ani  06-Handwriting.ani  07-Precision.ani  08-Unavailable.ani  09-Location Select.ani  10-Person Select.ani  11-Vertical Resize.ani  12-Horizontal Resize.ani  13-Diagonal Resize 1.ani  14-Diagonal Resize 2.ani  15-Move.ani  16-Alternate Select.ani  Installer.inf  [Changelog].txt
testing/fixtures/: neuro_alt_frames  neuro_help_argb
testing/fixtures/neuro/: How to Install & Info.txt  Install.inf
tests/test_data/: README.md
