[package]
name = "currust"
version = "0.9.1"
edition = "2024"
description = "A tool to convert Windows cursors to Linux"
authors = ["hachispin"]

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
clap = { version = "4.5.53", features = ["derive"] }
configparser = "3.1.0"
fast_image_resize = { version = "6.0.0", features = ["rayon"] }
ico = "0.5.0"
rayon = "1.11.0"

[dev-dependencies]
lazy_static = "1.5.0"
libc = "0.2.180"
tempfile = "3.24.0"
x11 = "2.21.0"
