[package]
name = "currust"
version = "1.0.1"
edition = "2024"
description = "A tool to convert Windows cursors to Linux"
authors = ["hachispin"]
license = "MIT"
repository = "https://github.com/hachispin/currust/"
keywords = ["cursor-converter", "xcursor", "ani", "cursor-theme", "scaling"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
anyhow = "1.0.100"
binrw = "0.15.0"
clap = { version = "4.5.53", features = ["derive"] }
configparser = "3.1.0"
fast_image_resize = { version = "6.0.0", features = ["rayon"] }
ico = "0.5.0"
rayon = "1.11.0"

[dev-dependencies]
lazy_static = "1.5.0"
libc = "0.2.180"
tempfile = "3.24.0"
x11 = "2.21.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
